--- a/NNZFSC/Views/Dashboard/AdminDashboard.cshtml
+++ b/NNZFSC/Views/Dashboard/AdminDashboard.cshtml
@@ -62,13 +62,9 @@
                                 </li>
                                 <li>
 
-                                    @Html.ActionLink(linkText: "Update", actionName: "Edit", controllerName: "RegisterMember", routeValues: new { id = 0 }, htmlAttributes: null)
+                                    @Html.ActionLink(linkText: "Update", actionName: "index", controllerName: "RegisterMember")
                                 </li>
-                                <li>
-                                    <a href="index3.html">Payment Details</a>
-                                    @Html.ActionLink(linkText: "Payment Details", actionName: "Details", controllerName: "RegisterMember", routeValues: new { id = 0 }, htmlAttributes: null)
-
-                                </li>
+                              
 
                             </ul>
                         </li>
@@ -135,7 +131,7 @@
                                 </li>
                                 <li>
                                     
-                                    @Html.ActionLink(linkText: "Update", actionName: "Edit", controllerName: "RegisterMember", routeValues: new { id = 0 }, htmlAttributes: null)
+                                    @Html.ActionLink(linkText: "Update", actionName: "index", controllerName: "RegisterMember")
                                 </li>
                                                            
                             </ul>
